# vulkan-engine

./: CMakeLists.txt  README.md  build.sh
src/: GravityApp.cpp  MainApp.cpp  MainApp.hpp  main.cpp
src/engine/backend/: Vertex.h  VulkanBuffer.cpp  VulkanBuffer.hpp  VulkanBufferManager.cpp  VulkanBufferManager.h  VulkanCamera.cpp  VulkanCamera.hpp  VulkanContext.cpp  VulkanContext.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDescriptors.hpp  VulkanDevice.cpp  VulkanDevice.hpp  VulkanFrameInfo.hpp  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanImageHandler.cpp  VulkanImageHandler.h  VulkanMemoryManager.cpp  VulkanMemoryManager.h  VulkanModel.cpp  VulkanModel.hpp  VulkanMovementController.cpp  VulkanMovementController.hpp  VulkanPipeline.cpp  VulkanPipeline.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp  VulkanSceneObject.cpp  VulkanSceneObject.hpp  VulkanSimpleRenderSystem.cpp  VulkanSimpleRenderSystem.hpp  VulkanSingleTimeCommand.cpp  VulkanSingleTimeCommand.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanSwapChain.hpp  VulkanUtils.hpp  Window.cpp  (+2 more)
src/engine/backend/ShaderResources/: VulkanUBO.h
src/engine/backend/systems/: VulkanPointLightSystem.cpp  VulkanPointLightSystem.hpp  VulkanSimpleRenderSystem.cpp  VulkanSimpleRenderSystem.hpp
src/old_engine/: old_main.cpp
src/old_engine/backend/: VulkanBufferManager.cpp  VulkanBufferManager.h  VulkanContext.cpp  VulkanImageHandler.h
src/shaders/: compile.sh  frag.spv  fragment.glsl  point_light.frag.glsl  point_light.frag.spv  point_light.vert.glsl  vert.spv  vertex.glsl
(+2 files in other folders)
